--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
-use_frameworks!
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '8.0'
 
 target 'SNMediator_Example' do
   pod 'SNMediator', :path => '../'
@@ -8,4 +9,9 @@ target 'SNMediator_Example' do
 
     
   end
+end
+post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+        config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+    end
 end
