--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@
 
 osx_image: xcode7.3
 language: objective-c
+xcode_project: SNMediator.xcworkspace
+xcode_scheme: SNMediator-Example
 # cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
+podfile: Example/Podfile
+
+before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+- pod install --project-directory=Example
+
 script:
 - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SNMediator.xcworkspace -scheme SNMediator-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
