--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@
 
 osx_image: xcode7.3
 language: objective-c
-xcode_project: SNMediator.xcodeproj
-xcode_scheme: SNMediator
+xcode_workspace: SNMediator.xcworkspace
 xcode_scheme: SNMediator-Example
 # cache: cocoapods
 podfile: Example/Podfile
