--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@
 
 osx_image: xcode7.3
 language: objective-c
-xcode_workspace: SNMediator.xcworkspace
-xcode_scheme: SNMediator-Example
+xcode_workspace: Example/SNMediator.xcworkspace
+xcode_scheme: Example/SNMediator-Example
 # cache: cocoapods
 podfile: Example/Podfile
 
