--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@
 
 osx_image: xcode7.3
 language: objective-c
-xcode_workspace: Example/SNMediator.xcworkspace
-xcode_scheme: Example/SNMediator-Example
+xcode_project: SNMediator.xcodeproj
+xcode_scheme: Pods-SNMediator_Example
+  Pods-SNMediator_Tests
+  SNMediator
 # cache: cocoapods
 podfile: Example/Podfile
 
