--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@
 
 osx_image: xcode7.3
 language: objective-c
-xcode_project: SNMediator.xcodeproj
-xcode_scheme: Pods-SNMediator_Example
-  Pods-SNMediator_Tests
-  SNMediator
+xcode_project: Example/SNMediator.xcodeproj
+xcode_scheme: 
+  
 # cache: cocoapods
 podfile: Example/Podfile
 
