--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@
 
 osx_image: xcode7.3
 language: objective-c
-xcode_workspace: Example/SNMediator.xcworkspace # path to your xcodeproj folder
-xcode_scheme: SNMediator-Example
+xcode_workspace: SNMediator.xcworkspace # path to your xcodeproj folder
+xcode_scheme: SNMediator_Example 
 # cache: cocoapods
 podfile: Example/Podfile
 
