fixed bug transit app life enent to modules

--- a/SNMediator/Assets/SNMediator.bundle/Modules.plist
+++ b/SNMediator/Assets/SNMediator.bundle/Modules.plist
@@ -8,7 +8,7 @@
 		<key>scheme</key>
 		<string>snow</string>
 		<key>delegateClass</key>
-		<string></string>
+		<string>SNTestModuleAppDelegate</string>
 		<key>routerList</key>
 		<array>
 			<dict>
